[package]
name = "bevy_child_window"
version = "0.1.0"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
description = "Allows you to create an embed child window in Bevy"
repository = "https://github.com/not-elm/bevy_child_window"
categories = ["gui", "game-development"]
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_window",
    "bevy_winit",
    "serialize",
] }
winit = { version = "=0.30.7" }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
bevy = "0.15"
bevy_webview_wry = "0.1.0"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.59.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block2 = { version = "0.5.1" }
objc2 = { version = "0.5.2", features = ["std"] }
objc2-app-kit = { version = "0.2.2", features = [
    "NSApplication",
    "NSEvent",
    "NSWindow",
    "NSView",
    "NSPasteboard",
    "NSPanel",
    "NSResponder",
    "NSOpenPanel",
    "NSSavePanel",
    "NSMenu",
    "NSGraphics",
    "NSTrackingArea",
    "block2",
] }
objc2-foundation = { version = "0.2.0" }

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rust]
missing_docs = "warn"
